--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigationsmenu med links til andre sider på websitet -->
         <nav class="navigation-container-forside">
             <div class="navigation-indhold">
-                <img src="logo.png" alt="LOGO" class="logo">
+                <img src="forside/logo.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="om-mig.html">OM MIG</a></li>
                     <li><a href="portfolio.html">PORTFOLIO</a></li>
@@ -43,7 +43,7 @@
             </div>
             <!-- Billede der supplerer introduktionen -->
             <div class="billede-container-forside">
-                <img src="migforside.png" alt="Billede af Signe" class="billede">
+                <img src="forside/migforside.jpg" alt="Billede af Signe" class="billede">
             </div>
         </section>
     </main>
@@ -53,25 +53,25 @@
         <!-- Kontakinformation -->
         <div class="footer-tre-info">
             <div class="footer-info">
-                <img src="lokation.png" alt="Lokation" class="ikon">
+                <img src="forside/lokation.png" alt="Lokation" class="ikon">
                 <address>Fengersvej 37, Odense M</address>
             </div>
             <!-- Man kan ved tel og mail trykke direkte og sendes videre -->
             <div class="footer-info">
-                <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
                 <a href="tel:+4531335654">+45 31 33 56 54</a>
             </div>
             <div class="footer-info">
-                <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                <img src="forside/mail-ikon.png" alt="E-mailadresse" class="ikon">
                 <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
             </div>
         </div>
         
         <!-- Links til sociale medie-profiler med ikoner -->
         <div class="sociale-medier">
-            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/signe.groenning/"><img src="forside/Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="forside/in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="forside/FB-ikon.png" alt="Facebook"></a>
         </div>
     </footer>
 </body>
