--- a/kontakt.html
+++ b/kontakt.html
@@ -20,7 +20,7 @@
         <!-- Navigationsmenu med links til andre sider på websitet -->
         <nav class="navigation-container-forside">
             <div class="navigation-indhold">
-                <img src="logo.png" alt="LOGO" class="logo">
+                <img src="forside/logo.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html">OM MIG</a></li>
@@ -42,17 +42,17 @@
                     <p class="brodtekst">Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig og muligheden for at arbejde sammen for at bidrage til at realisere dine kreative visioner.</p>
                     <div class="kontakt-detajler">
                         <div class="kontakt-item">
-                            <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                            <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
                             <p>+45 31 33 65 64</p>
                         </div>
                         <div class="kontakt-item">
-                            <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                            <img src="forside/mail-ikon.png" alt="E-mailadresse" class="ikon">
                             <p>signe.gronning@gmail.com</p>
                         </div>
                     </div>
                 </div>
                 <div class="kontakt-billede">
-                    <img src="migkontakt.png" alt="Signe Grønning">
+                    <img src="kontakt/kontaktmig.jpg" alt="Signe Grønning">
                 </div>
             </div>
         </section>
@@ -77,22 +77,22 @@
     <footer>
         <div class="footer-tre-info">
             <div class="footer-info">
-                <img src="lokation.png" alt="Lokation" class="ikon">
+                <img src="forside/lokation.png" alt="Lokation" class="ikon">
                 <address>Fengersvej 37, Odense M</address>
             </div>
             <div class="footer-info">
-                <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
                 <a href="tel:+4531335654">+45 31 33 56 54</a>
             </div>
             <div class="footer-info">
-                <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                <img src="forside/mail-ikon.png" alt="E-mailadresse" class="ikon">
                 <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
             </div>
         </div>
         <div class="sociale-medier">
-            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/signe.groenning/"><img src="forside/Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="forside/in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="forside/FB-ikon.png" alt="Facebook"></a>
         </div>
     </footer>
 </body>
