--- a/om-mig.html
+++ b/om-mig.html
@@ -20,7 +20,7 @@
         <!-- Navigationsmenu med links til andre sider på websitet -->
         <nav class="navigation-container-forside">
             <div class="navigation-indhold">
-                <img src="logo.png" alt="LOGO" class="logo">
+                <img src="forside/logo.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html" class="active">OM MIG</a></li>
@@ -41,37 +41,37 @@
                     <p>Min helt store interesse er digital design og online medieplatforme. Derfor læser jeg til multimediedesign på UCL, Odense.</p>
                     <p>På min uddannelse har jeg en stor interesse i at skabe detaljeorienterede og æstetisk tiltalende løsninger både selvstændigt og i kreative teams.</p>
                 </div>
-                <img src="migomside.jpg" alt="Signe Grønning" class="billede-om-mig">
+                <img src="om-mig/migomside.jpg" alt="Signe Grønning" class="billede-om-mig">
             </div>
 
             <section class="mine-kompetencer">
                 <h2 class="under-overskrift">Mine kompetencer</h2>
                 <div class="kompetence-liste">
                     <div class="kompetence">
-                        <img src="idé.png" alt="Kreativ idégenerering">
+                        <img src="om-mig/idé.png" alt="Kreativ idégenerering">
                         <h3>Kreativ idégenerering</h3>
                         <p>Kreativ idégenerering<br>Hands-on læring.</p>
                     </div>
                     <div class="kompetence">
-                        <img src="figma.png" alt="Figma">
+                        <img src="om-mig/figma.png" alt="Figma">
                         <h3>Figma</h3>
                         <p>Erfaring i Figma. Bruger det til at visualisere projekter. Det er alt fra lo-fi til prototyper og mock-up format.</p>
                     </div>
                     <div class="kompetence">
-                        <img src="kode.png" alt="Kodning">
+                        <img src="om-mig/kode.png" alt="Kodning">
                         <h3>HTML og CSS</h3>
                         <p>Kodning er helt nyt for mig. Denne hjemmeside er mit første forsøg på at kode og det har givet en grundlæggende viden for HTML og CSS.</p>
                     </div>
                 </div>
                 <div class="adobe-programmer">
-                    <img src="adobe.png" alt="Adobe" class="adobe-logo">
+                    <img src="om-mig/adobe.png" alt="Adobe" class="adobe-logo">
                     <div class="adobe-ikoner">
-                        <img src="ae.png" alt="Adobe After Effects">
-                        <img src="ai.png" alt="Adobe Illustrator">
-                        <img src="lr.png" alt="Adobe Lightroom">
-                        <img src="pr.png" alt="Adobe PremierePro">
-                        <img src="ps.png" alt="Adobe Photoshop">
-                        <img src="id.png" alt="Adobe InDesign">
+                        <img src="om-mig/ae.png" alt="Adobe After Effects">
+                        <img src="om-mig/ai.png" alt="Adobe Illustrator">
+                        <img src="om-mig/lr.png" alt="Adobe Lightroom">
+                        <img src="om-mig/pr.png" alt="Adobe PremierePro">
+                        <img src="om-mig/ps.png" alt="Adobe Photoshop">
+                        <img src="om-mig/id.png" alt="Adobe InDesign">
                     </div>
                     <h3>Adobe programmer</h3>
                     <p>Min største kendskab i Adobe programmerne ligger I Adobe Illustrator og Lightroom. Med jeg har også kendskab til InDesign, Photoshop og Premiere Pro.</p>
@@ -84,22 +84,22 @@
     <footer>
         <div class="footer-tre-info">
             <div class="footer-info">
-                <img src="lokation.png" alt="Lokation" class="ikon">
+                <img src="forside/lokation.png" alt="Lokation" class="ikon">
                 <address>Fengersvej 37, Odense M</address>
             </div>
             <div class="footer-info">
-                <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
                 <a href="tel:+4531335654">+45 31 33 56 54</a>
             </div>
             <div class="footer-info">
-                <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                <img src="forside/mail-ikon.png" alt="E-mailadresse" class="ikon">
                 <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
             </div>
         </div>
         <div class="sociale-medier">
-            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/signe.groenning/"><img src="forside/Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="forside/in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="forside/FB-ikon.png" alt="Facebook"></a>
         </div>
     </footer>
 </body>
