--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <!-- Navigationsmenu med links til andre sider på websitet -->
         <nav class="navigation-container-forside">
             <div class="navigation-indhold">
-                <img src="logo.png" alt="LOGO" class="logo">
+                <img src="forside/logo.png" alt="LOGO" class="logo">
                 <ul>
                     <li><a href="index.html">FORSIDE</a></li>
                     <li><a href="om-mig.html">OM MIG</a></li>
@@ -38,8 +38,8 @@
             <div class="galleri">
                 <section class="projekt">
                     <div class="produktbilleder">
-                        <img src="citroner.jpg" alt="Produktbilleder">
-                        <img src="images/kaffe.jpg" alt="Produktbilleder">
+                        <img src="portfolio/citroner.jpg" alt="Produktbilleder">
+                        <img src="portfolio/kaffe.jpg" alt="Produktbilleder">
                     </div>
                     <div class="beskrivelse">
                         <h2>Produktbilleder</h2>
@@ -48,8 +48,8 @@
                 </section>
                 <section class="design">
                     <div class="logo-billeder">
-                        <img src="logo-ms.jpg" alt="Logo">
-                        <img src="Galschiot.png" alt="Design">
+                        <img src="portfolio/logo-ms.jpg" alt="Logo">
+                        <img src="portfolio/Galschiot.jpg" alt="Design">
                     </div>
                     <div class="beskrivelse-logo">
                         <h2>Design</h2>
@@ -58,8 +58,8 @@
                 </section>
                 <section class="portrait">
                     <div class="portrait-billeder">
-                        <img src="SIgne.jpeg" alt="portræt af Signe">
-                        <img src="portrait.jpg" alt="Portræt">
+                        <img src="portfolio/Signe-portrait.jpg" alt="portræt af Signe">
+                        <img src="portfolio/portrait.jpg" alt="Portræt">
                     </div>
                     <div class="beskrivelse">
                         <h2>Portræt</h2>
@@ -68,8 +68,8 @@
                 </section>
                 <section class="branding">
                     <div class="brand-billeder">
-                        <img src="forside.png" alt="visitkort forside">
-                        <img src="bagside.png" alt="visitkort bagside">
+                        <img src="portfolio/forside.jpg" alt="visitkort forside">
+                        <img src="portfolio/bagside.jpg" alt="visitkort bagside">
                     </div>
                     <div class="beskrivelse-brand">
                         <h2>Branding</h2>
@@ -100,22 +100,22 @@
     <footer>
         <div class="footer-tre-info">
             <div class="footer-info">
-                <img src="lokation.png" alt="Lokation" class="ikon">
+                <img src="forside/lokation.png" alt="Lokation" class="ikon">
                 <address>Fengersvej 37, Odense M</address>
             </div>
             <div class="footer-info">
-                <img src="telefon-ikon.png" alt="Telefon" class="ikon">
+                <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
                 <a href="tel:+4531335654">+45 31 33 56 54</a>
             </div>
             <div class="footer-info">
-                <img src="mail-ikon.png" alt="E-mailadresse" class="ikon">
+                <img src="forside/mail-ikon.png" alt="E-mailadresse" class="ikon">
                 <a href="mailto:signe.gronning@gmail.com">signe.gronning@gmail.com</a>
             </div>
         </div>
         <div class="sociale-medier">
-            <a href="https://www.instagram.com/signe.groenning/"><img src="Insta-ikon.png" alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="in-ikon.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/signe.gronning"><img src="FB-ikon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/signe.groenning/"><img src="forside/Insta-ikon.png" alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/signe-grønning/"><img src="forside/in-ikon.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/signe.gronning"><img src="forside/FB-ikon.png" alt="Facebook"></a>
         </div>
     </footer>
 </body>
