--- a/portfolio.html
+++ b/portfolio.html
@@ -85,9 +85,16 @@
                         <iframe src="https://www.youtube.com/embed/qu4fMXsBrz4"></iframe>
                     </div>
                 </section>
-                <section class="animation">
+                <section class="animation desktop-only">
                     <div class="animation-ws"></div>
                     <div class="beskrivelse-animation">
+                        <h2>Animation</h2>
+                        <p>Animationen er først tegnet i Adobe Illustrator og derefter kodet i HTML og CSS for at kunne bevæge sig.</p>
+                    </div>
+                </section>
+                <section class="animation-tlf mobile-only">
+                    <iframe class="tlf-iframe" src="https://www.youtube.com/embed/qLqytK3i3Kc"></iframe>
+                    <div class="beskrivelse-tlf">
                         <h2>Animation</h2>
                         <p>Animationen er først tegnet i Adobe Illustrator og derefter kodet i HTML og CSS for at kunne bevæge sig.</p>
                     </div>
