--- a/kontakt.html
+++ b/kontakt.html
@@ -39,7 +39,7 @@
                 <div class="info-tekst">
                     <h1>KONTAKT</h1>
                     <h2>Har jeg fanget din interesse?</h2>
-                    <p class="brodtekst">Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig og muligheden for at arbejde sammen for at bidrage til at realisere dine kreative visioner.</p>
+                    <p class="brodtekst">Du er velkommen til at udfylde kontaktformularen, sende en e-mail, eller kontakte mig direkte for en uforpligtende samtale. Jeg ser frem til at høre fra dig, så vi kan drøfte muligheden for et samarbejde, hvor jeg bidrager til at realisere dine kreative visioner.</p>
                     <div class="kontakt-detajler">
                         <div class="kontakt-item">
                             <img src="forside/telefon-ikon.png" alt="Telefon" class="ikon">
