--- a/om-mig.html
+++ b/om-mig.html
@@ -37,8 +37,8 @@
             <div class="introduktion-om-mig">
                 <div class="tekst-om-mig">
                     <h1 class="overskrift-om-mig">OM MIG</h1>
-                    <p>Velkommen til min personlige side. Mit navn er Signe Grønning, jeg er en smilende pige på 22 år og bosiddende i Odense M.</p>
-                    <p>Min helt store interesse er digital design og online medieplatforme. Derfor læser jeg til multimediedesign på UCL, Odense.</p>
+                    <p>Velkommen til min personlige side. Mit navn er Signe Grønning. Jeg er en smilende og positiv pige på 22 år bosiddende i Odense M.</p>
+                    <p>Min helt store interesse er digital design og online medieplatforme. Derfor læser jeg til multimediedesigner på UCL, Odense.</p>
                     <p>På min uddannelse har jeg en stor interesse i at skabe detaljeorienterede og æstetisk tiltalende løsninger både selvstændigt og i kreative teams.</p>
                 </div>
                 <img src="om-mig/migomside.jpg" alt="Signe Grønning" class="billede-om-mig">
@@ -74,7 +74,7 @@
                         <img src="om-mig/id.png" alt="Adobe InDesign">
                     </div>
                     <h3>Adobe programmer</h3>
-                    <p>Min største kendskab i Adobe programmerne ligger I Adobe Illustrator og Lightroom. Med jeg har også kendskab til InDesign, Photoshop og Premiere Pro.</p>
+                    <p>Mit største kendskab i Adobe programmerne ligger i Adobe Illustrator og Lightroom. Med jeg har også kendskab til InDesign, Photoshop og Premiere Pro.</p>
                 </div>
             </section>
         </section>
