--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                 <section class="video-sektion">
                     <div class="beskrivelse-video">
                         <h2>Video</h2>
-                        <p>Videoen er redigeret i Adobe Premiere Pro og videomaterialet er optaget på UCL. Videoen er stil med en TikTok.</p>
+                        <p>Videoen er redigeret i Adobe Premiere Pro og videomaterialet er optaget på UCL. Videoen er i stil med en TikTok.</p>
                     </div>
                     <div class="portfolio-video">
                         <iframe src="https://www.youtube.com/embed/qu4fMXsBrz4"></iframe>
