--- a/om-mig.html
+++ b/om-mig.html
@@ -48,7 +48,7 @@
                 <h2 class="under-overskrift">Mine kompetencer</h2>
                 <div class="kompetence-liste">
                     <div class="kompetence">
-                        <img src="om-mig/idé.png" alt="Kreativ idégenerering">
+                        <img src="om-mig/ide.png" alt="Kreativ idégenerering">
                         <h3>Kreativ idégenerering</h3>
                         <p>Kreativ idégenerering<br>Hands-on læring.</p>
                     </div>
